fix mat autocomplete to be not shifted

--- a/privacyidea/static_new/src/app/components/layout/layout.component.scss
+++ b/privacyidea/static_new/src/app/components/layout/layout.component.scss
@@ -128,6 +128,10 @@
       margin-left: -297px;
     }
 
+    .mat-mdc-autocomplete-panel {
+      margin-left: -297px;
+    }
+
     .mat-mdc-tooltip {
       margin-left: -340px;
     }
